appId: com.ourlime.app
---
- launchApp

# 1. Assert Login screen is visible
- assertVisible:
    text: ".*(Sign back in|Welcome back|Email Address|Home|Feeds).*"

# 2. Fill Email Address
- tapOn:
    text: "Email Address"
    optional: true
- eraseText:
    charactersToErase: 100
- inputText: ${TEST_EMAIL}

# 3. Fill Password
- tapOn:
    text: "Password"
    optional: true
- eraseText:
    charactersToErase: 100
- inputText: ${TEST_PASSWORD}

# 4. Hide Keyboard & Tap Login
- hideKeyboard
- tapOn:
    text: "Login"
    optional: true

# 5. Assert Home Feed Loaded
- assertVisible:
    text: ".*(Home|Feeds|All|Photos|Videos|Sound).*"
